# util

./: .gitignore  Cargo.toml  README.md
core/src/: lib.rs
examples/actix-demo/: Cargo.toml
examples/actix-demo/src/: handler.rs  lib.rs  main.rs
examples/actix-demo/src/app/: database.rs  error.rs  handler.rs  mod.rs
examples/adder/src/: main.rs
examples/axum-1/: Cargo.toml
examples/axum-1/src/: main.rs
examples/axum-demo/: Cargo.toml  api.http
examples/axum-demo/src/: lib.rs  main.rs
examples/collections/: Cargo.toml
examples/collections/src/: lib.rs
examples/db-demo/: Cargo.toml
examples/db-demo/src/: lib.rs
examples/demo-mongodb/: Cargo.toml
examples/demo-mongodb/src/: database.rs  error.rs  main.rs
examples/mongodb/: Cargo.toml
examples/mongodb-demo/: Cargo.toml
examples/mongodb-demo/src/: error.rs
examples/mongodb/src/: error.rs  main.rs  model.rs
examples/net-rest-axum/: Cargo.toml
examples/rest-axum/: Cargo.toml
examples/rest-axum/src/: error.rs  handler.rs  lib.rs
examples/rest-axum/src/database/: error.rs  mod.rs  movie.rs  todo.rs
examples/rest-axum/src/model/: error.rs  mod.rs  movie.rs  todo.rs
examples/rest-demo/: Cargo.toml
examples/rest-demo/src/: lib.rs
examples/rocket-demo/: Cargo.toml
examples/rocket-demo/src/: handler.rs  lib.rs
src/: lib.rs
src/collections/: mod.rs
